# DesktopClient

./: .gitignore  CMakeLists.txt  README.md
include/: exception.h  joypad.h  mainwindow.h  robotichandcore.h  wcentral.h  wcontrol.h  wrobotichand.h  wrobotichand.h.gch
libs/: analogclock.cpp  analogclock.h  joystick.cc
src/: joypad.cpp  main.cpp  mainwindow.cpp  robotichandcore.cpp  wcentral.cpp  wcontrol.cpp  wrobotichand.cpp
